--- a/src/app/one/one.component.html
+++ b/src/app/one/one.component.html
@@ -1,16 +1,18 @@
 <h4>Chercher un Pokémon 🔍</h4>
-<input type="text" placeholder="ex. pikachu">
-<br>
-<button>Rechercher</button>
+<form>
+    <input type="text" placeholder="ex. pikachu" name="pokemon" [(ngModel)]="pokemonName">
+    <br>
+    <button (click)="btnSearchPokemon()">Rechercher</button>
+</form>
 <br><br>
 
 <!-- Exemple d'affichage des informations du Pokémon recherché  -->
 <h4>Résultat 🕵️‍♀️</h4>
 
-<div>
-<p>Id : 333</p>
-<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/333.png" alt="Swablu">
-<p>Nom : Swablu</p>
+<div *ngIf="pokemon != null">
+<p>Id : {{pokemon.id}}</p>
+<img src="{{pokemon.imgSrc}}" alt="{{pokemon.name}}">
+<p>Nom : {{pokemon.name}}</p>
 <p class="favorite">+⭐</p>
 </div>
 
