FCT: Question 4 (Stockage local de liste de pokemons)

--- a/src/app/favs/favs.component.html
+++ b/src/app/favs/favs.component.html
@@ -4,7 +4,7 @@
 
   <!-- Exemple d'affichage de 2 pokémons favoris -->
 
-  <div *ngFor="let p of pokemonFavList" class="col-2 pkmn">
+  <div *ngFor="let p of favPokemonsList" class="col-2 pkmn">
     <h5>Id : {{p.id}}</h5>
     <p>Nom : {{p.name}}</p>
     <img class="img-fluid" src="{{p.imgSrc}}">
