--- a/src/app/one/one.component.html
+++ b/src/app/one/one.component.html
@@ -13,6 +13,6 @@
 <p>Id : {{pokemon.id}}</p>
 <img src="{{pokemon.imgSrc}}" alt="{{pokemon.name}}">
 <p>Nom : {{pokemon.name}}</p>
-<p (click)="saveFavPokemon()"  class="favorite">+⭐</p>
+<p (click)="btnSaveFavPokemon()"  class="favorite">+⭐</p>
 </div>
 
